force-app/main/default/objects/ContactPointEmail/fields/Invalid_Reason__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Reason__c</fullName>
    <label>Invalid Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Typo</fullName>
            </value>
            <value>
                <fullName>Wrong Person</fullName>
            </value>
            <value>
                <fullName>Manual Unsubscribe</fullName>
            </value>
            <value>
                <fullName>No Longer Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>