force-app/main/default/objects/ContactPointEmail/fields/Marked_For_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Marked_For_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked for Deletion</label>
    <type>Checkbox</type>
</CustomField>